@@ -1,3 +1,8 @@
+2006-08-25  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/dist.py (KiwiInstallData.run_install): Take into account --root to the
+	distutils install command if it's sent in.
+
 === 1.9.9 ===
 2006-08-23  Johan Dahlin  <jdahlin@async.com.br>
 
